crates/ruff_python_parser/tests/snapshots/valid_syntax@lambda_with_no_parameters.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..10,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 0..9,
                    value: Lambda(
                        ExprLambda {
                            node_index: NodeIndex(None),
                            range: 0..9,
                            parameters: None,
                            body: NumberLiteral(
                                ExprNumberLiteral {
                                    node_index: NodeIndex(None),
                                    range: 8..9,
                                    value: Int(
                                        1,
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
        runtime_body: None,
    },
)
```
